--- a/src/css/main.css
+++ b/src/css/main.css
@@ -272,3 +272,25 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+
+#canvas{
+    border-radius: 5px;
+    background: #b3d4fc !important;
+    display: block;
+}
+#content{
+    border: 2px solid black;
+    width: 500px;
+    height: 500px;
+    display: block;
+}
+#sphere {
+    position: absolute;
+    top: 500px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    -webkit-radius: 50px;
+    background-color: blue;
+}
